<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/activity_main"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="105dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/inf"
            android:textColor="@color/white_greyish"
            android:textSize="23sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/doctorbtn1"
            android:layout_width="280dp"
            android:layout_height="140dp"
            android:layout_centerInParent="true"
            android:background="@drawable/mybutton_home"
            android:padding="3dp"
            android:layout_marginBottom="5dp"
            android:text="@string/doctor"
            android:textColor="@color/white_greyish"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/patientbtn"
            android:layout_width="280dp"
            android:layout_height="140dp"
            android:layout_below="@+id/doctorbtn1"
            android:layout_alignRight="@+id/doctorbtn1"
            android:layout_marginTop="160dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/mybutton_home"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/patientbtn"
            android:textColor="@color/white_greyish"
            android:textSize="17sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>