<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settinglayout"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="#00FCFCFC"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_marginBottom="0dp"
        android:id="@+id/ll">
        <Button
            android:id="@+id/changenamedr"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/changedname"
            android:textAllCaps="false"
            android:background="@drawable/mybutton_home"
            android:drawableRight="@drawable/ic_edit_black_24dp"
            android:textSize="14sp"
            android:textStyle="normal"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:layout_marginBottom="10dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="14sp"
            android:id="@+id/changepassworddr"
            android:textAllCaps="false"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/changedpassword"
            android:background="@drawable/mybutton_home"
            android:drawableRight="@drawable/ic_edit_black_24dp"
            android:textStyle="normal"
            android:paddingBottom="10dp"
            android:layout_marginBottom="10dp"
            />
        <Button
            android:layout_width="match_parent"
            android:textAllCaps="false"
            android:layout_height="50dp"
            android:id="@+id/change_emaildr"
            android:text="@string/changedemailid"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:background="@drawable/mybutton_home"
            android:drawableRight="@drawable/ic_edit_black_24dp"
            android:textSize="14sp"
            android:textStyle="normal"
            android:paddingBottom="10dp"
            android:layout_marginBottom="10dp"/>
        <Button
            android:layout_width="match_parent"
            android:paddingRight="10dp"
            android:layout_height="50dp"
            android:text="@string/changedaddress"
            android:id="@+id/changenaddsdr"
            android:textAllCaps="false"
            android:paddingTop="10dp"
            android:background="@drawable/mybutton_home"
            android:drawableRight="@drawable/ic_edit_black_24dp"
            android:textSize="14sp"
            android:textStyle="normal"
            android:paddingBottom="10dp"
            android:layout_marginBottom="0dp"
            />
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="14sp"
                android:id="@+id/changemobdr"
                android:textAllCaps="false"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/changedmob"
                android:background="@drawable/mybutton_home"
                android:drawableRight="@drawable/ic_edit_black_24dp"
                android:textStyle="normal"
                android:paddingBottom="10dp"
                android:layout_marginBottom="10dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="14sp"
            android:id="@+id/drdeleteacount"
            android:textAllCaps="false"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="Delete my account"
            android:background="@drawable/mybutton_home"
            android:drawableRight="@drawable/ic_edit_black_24dp"
            android:textStyle="normal"
            android:paddingBottom="10dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
</RelativeLayout>
