<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/homelayout"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_color">
    <LinearLayout
        android:id="@+id/sliderpart"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">
        <com.daimajia.slider.library.SliderLayout
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_below="@+id/sliderpart"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="#00FCFCFC"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:id="@+id/ll">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/booking"
            android:text="@string/bookbtn"
            android:background="@drawable/mybutton_home"
            android:drawableTop="@drawable/ic_watch_later_black_24dp"
            android:textSize="18sp"
            android:paddingBottom="10dp"
            android:paddingTop="5dp"
            android:layout_marginBottom="5dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/showdoctors"
            android:paddingTop="0dp"
            android:text="@string/doctorsbtn"
            android:background="@drawable/mybutton_home"
            android:drawableTop="@drawable/ic_people_black_24dp"
            android:textSize="18sp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="5dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/showhospital"
            android:text="@string/hospialsbtn"
            android:paddingTop="5dp"
            android:background="@drawable/mybutton_home"
            android:drawableTop="@drawable/ic_local_hospital_black_24dp"
            android:textSize="18sp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="5dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nutration"
            android:text="@string/nutritionbtn"
            android:paddingTop="5dp"
            android:background="@drawable/mybutton_home"
            android:drawableTop="@drawable/ic_restaurant_menu_black_24dp"
            android:textSize="18sp"
            android:paddingBottom="10dp"
            />
    </LinearLayout>
</RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        android:background="@drawable/bg_color"
        android:id="@+id/nv">
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
